# slang-particles

./: .clang-format  .gitignore  README.md  main.py  pyproject.toml
shader/: greedy.slang  particle_renderer.slang  particle_utils.slang  prepare_frame.slang  random.slang  tiled.slang  types.slang
slang_particles/: __init__.py  app.py  camera.py  math.py  mesh.py  particle_shader.py  particles.py  renderer.py  shader.py  timer.py  transform.py
