[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slang-particles"
version = "0.1.0"
description = "Slang-based particle rendering system"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "omegaconf>=2.3.0",
    "slangpy>=0.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["slang_particles"]
